2008-05-15  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Commands/ViewCommands.cs, MonoDevelop.Ide.addin.xml,
	  MonoDevelop.Ide.mdp, Makefile.am,
	  MonoDevelop.Ide.Gui/DefaultWorkbench.cs,
	  MonoDevelop.Ide.Gui/Pad.cs, MonoDevelop.Ide.Codons/CategoryNode.cs:
	  Added support for view pad categories. When a pad is assigned to a
	  category, it will be shown in a submenu in the view menu.
	* MonoDevelop.Ide.Debugging/DebuggingService.cs: Added support for
	  changing the current frame of the stack. Added Started event.
	* MonoDevelop.Ide.Gui/ProjectOperations.cs: Disabled workbench context
	  switching when debugging an app.

2008-05-08  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/MonoDevelopStatusBar.cs: Fixed 'Bug 387448 - New
	  text editor always show same value for "col" and "ch"'

2008-05-01  Aaron Bockover <abockover@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Fully reset the thread state
	just to be thorough even though it shouldn't matter because the dialog
	doesn't get reused

2008-05-01  Aaron Bockover <abockover@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/GoToDialog.cs: Got rid of absolutely insane
	threading; previously a thread would be spawned by every single character
	change in the search, also the previous thread would first be _aborted_;
	this caused frequent complete lockups (often leading to data loss), 
	excessive resource drain, and suboptimal performance

	Replaced with a single thread that uses an AutoResetEvent to wait until
	search work is requested, and never abort this thread - allow search
	iterations to exit safely and return to the wait; also destroy the dialog
	and exit the single thread safely when the dialog is dismissed instead
	of just hiding and reusing it - there's no reason for that other than
	wasting resources and increasing code complexity; some general clean up

	* MonoDevelop.Ide.Commands/SearchCommands.cs: Reflected to use the new
	.Run method, what used to be .Show
