@@ -1,3 +1,8 @@
+2008-05-19  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* MonoDevelop.Ide.addin.xml: Fix bug #375128 - Not all menu items in
+	  Proper Case. Patch by Gabriel Burt.
+
 2008-05-15  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.Ide.Commands/ViewCommands.cs, MonoDevelop.Ide.addin.xml,
